# Personal-Cpp-Projects

./: README.md
Breakout-Game/: .gitignore  CMakeLists.txt  README.md  vcpkg.json
Breakout-Game/include/: Ball.hpp  Brick.hpp  Game.hpp  Paddle.hpp  Position.hpp
Breakout-Game/src/: Ball.cpp  Game.cpp  Paddle.cpp  main.cpp
Client-Server/: CMakeLists.txt  README.md
Client-Server/include/: Client.hpp  ClientIf.hpp  Server.hpp  ServerIf.hpp  Socket.hpp  SocketIf.hpp  client.hpp  server.hpp
Client-Server/src/: Client.cpp  Server.cpp  Socket.cpp  client.cpp  client_main.cpp  server.cpp  server_main.cpp
Game-Engine/: .gitignore  CMakeLists.txt
Game-Engine/include/: AssetManager.hpp  Component.hpp  Engine.hpp  Entity.hpp  EntityManager.hpp  GameScene.hpp  MainMenuScene.hpp  MovementComponent.hpp  PauseScene.hpp  Player.hpp  Renderer.hpp  SceneIf.hpp  SceneRequest.hpp  SceneType.hpp  SpriteComponent.hpp  TextureComponent.hpp  TransformComponent.hpp  Window.hpp
Game-Engine/src/: AssetManager.cpp  Engine.cpp  Entity.cpp  EntityManager.cpp  GameScene.cpp  MainMenuScene.cpp  MovementComponent.cpp  PauseScene.cpp  Player.cpp  Renderer.cpp  SpriteComponent.cpp  TextureComponent.cpp  TransformComponent.cpp  Window.cpp  main.cpp
Snake/: CMakeLists.txt  README.md  vcpkg.json
Snake/include/: Direction.hpp  Game.hpp  Position.hpp  Snake.hpp
Snake/src/: Game.cpp  Snake.cpp  main.cpp
